[gd_scene load_steps=17 format=3 uid="uid://c53yk3rf401p1"]

[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_6qp5w"]
[ext_resource type="Material" uid="uid://04r00e20kg0y" path="res://granite.tres" id="2_ou8l2"]
[ext_resource type="Texture2D" uid="uid://c3kq4ic0uwf80" path="res://assets/hand_sheet.png" id="3_nowjf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0icw5"]
size = Vector2(10, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqk4g"]
atlas = ExtResource("3_nowjf")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s58ve"]
atlas = ExtResource("3_nowjf")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_11adq"]
atlas = ExtResource("3_nowjf")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2ks8"]
atlas = ExtResource("3_nowjf")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_achtt"]
atlas = ExtResource("3_nowjf")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_reu00"]
atlas = ExtResource("3_nowjf")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1q65"]
atlas = ExtResource("3_nowjf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_enrxx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqk4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s58ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11adq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2ks8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_achtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reu00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1q65")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_llwul"]
radius = 5.5
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0uou7"]
atlas = ExtResource("3_nowjf")
region = Rect2(112, 0, 15, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_m4cap"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uou7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5dpen"]
size = Vector2(14, 10)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_mask = 9
script = ExtResource("1_6qp5w")

[node name="HandSheet" type="Sprite2D" parent="."]
visible = false
material = ExtResource("2_ou8l2")
position = Vector2(9, 18)
texture = ExtResource("3_nowjf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_0icw5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = ExtResource("2_ou8l2")
sprite_frames = SubResource("SpriteFrames_enrxx")

[node name="sword" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="sword"]
position = Vector2(-0.5, -8)
shape = SubResource("CapsuleShape2D_llwul")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="sword"]
material = ExtResource("2_ou8l2")
position = Vector2(-1, -8)
sprite_frames = SubResource("SpriteFrames_m4cap")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_5dpen")

[node name="knockbackTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="swingTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="knockbackTime" to="." method="_on_knockback_time_timeout"]
[connection signal="timeout" from="swingTimer" to="." method="_on_swing_timer_timeout"]
